; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_refs_for_each_fullref_in.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_refs_for_each_fullref_in.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_store = type { i32 }

@DO_FOR_EACH_INCLUDE_BROKEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @refs_for_each_fullref_in(%struct.ref_store* %0, i8* %1, i32 %2, i8* %3, i32 %4) #0 {
  %6 = alloca %struct.ref_store*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.ref_store* %0, %struct.ref_store** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  store i32 0, i32* %11, align 4
  %12 = load i32, i32* %10, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %5
  %15 = load i32, i32* @DO_FOR_EACH_INCLUDE_BROKEN, align 4
  store i32 %15, i32* %11, align 4
  br label %16

16:                                               ; preds = %14, %5
  %17 = load %struct.ref_store*, %struct.ref_store** %6, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %11, align 4
  %21 = load i8*, i8** %9, align 8
  %22 = call i32 @do_for_each_ref(%struct.ref_store* %17, i8* %18, i32 %19, i32 0, i32 %20, i8* %21)
  ret i32 %22
}

declare dso_local i32 @do_for_each_ref(%struct.ref_store*, i8*, i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
